--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ body {
 .bottom {
     grid-row: 3 / 4;
     grid-column: 1 / 5;
-    background-color:#1b2557;
+    background-color:#394892;
     display: flex;
     justify-content: space-between;
     position: relative;
